--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<title>Core Fitness Studio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
 </head>
@@ -27,9 +31,9 @@
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
 					<li><a href="services.html">Services</a></li>
-					<li><a href="index.html#instructors" class="scrolly">Instructors</a></li>
+					<li><a href="#instructors" class="scrolly">Instructors</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="index.html#contactScoll" class="scrolly">Contact</a></li>
+					<li><a href="#contactScoll" class="scrolly">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -93,8 +97,9 @@
 		<section id="instructors" class="main">
 			<header>
 				<h2>Instructors</h2>
-				<p>Some quick thing who knows, I'm just gonna ramble for a moment so I can see what the section would
-					look like with some text, I'm rambling, I'm rambling, and then BINGO that should be enough words.
+				<p>We are a private studio operated by April Hanna and her team of trainers. Classes consist of
+					functional training, strength, cardio, and are designed to take you out of your comfort zone and
+					produce life changing results.
 				</p>
 			</header>
 			<div class="inner">
@@ -104,6 +109,15 @@
 						<h3>April Hanna</h3>
 						<p>Studio Owner<br>
 							HIIT and Spin & Strength Instructor</p>
+					</li>
+					<!--<li>
+						<p style="max-width: 65ch;">April Hanna is a fitness professional and certified health coach who
+							loves to share her
+							knowledge and energy with others. Having over 18 years of experience, she is a believer in
+							clean food, pure water, and exercise for the body and mind. She is an industry leader when
+							it comes to helping people reach & maintain their goals. As the owner of Core Fitness Studio
+							in Wadsworth, Ohio- she coaches people daily in person, but also provides her services
+							virtually to clients around the country.</p>
 					</li>
 					<li>
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
@@ -116,7 +130,7 @@
 						<h3>Karey Higgs</h3>
 						<p>Certified Fitness Instructor<br>
 							HIIT and Spin & Strength Instructor</p>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 		</section>
@@ -130,10 +144,69 @@
 				</p>-->
 			</header>
 			<div class="innerTest">
+
+				<!-- Sam Modal -->
+				<div class="modal fade" id="samModal" tabindex="-1" role="dialog" aria-labelledby="samModalLabel"
+					aria-hidden="true">
+					<div class="modal-dialog modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="samModalLabel">Sam Chadbourne</h5>
+								<div class="modal-stars">
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+									<i class="fas fa-star"></i>
+								</div>
+							</div>
+							<div class="modal-body">
+								As an avid exercise fan for most of my life, I found Core Fitness through a friend who
+								knew I was in need of changing up my exercise routine. As soon as I met April Hanna, I
+								was inspired by her positive energy and ability to relate to each students mental and
+								physical needs and goals. Each class is different and challenging. Throughout my years
+								of working out, I’ve had several injuries. At Core Fitness, April gives her student
+								hands on training to prevent injury. She knows each student on an individual level and
+								inspires each one of us to reach our goals. April is a leader in fitness and nutrition.
+								Each class is fun and I find myself excited to learn new things and grow both mentally
+								and physically. Core Fitness is a great place for people with diverse backgrounds and
+								goals to grow together and encourage one another. If you are looking for a studio to
+								grow both mentally and physically, I highly recommend April at Core Fitness. It was one
+								of the best choices I’ve made for my health.
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Second Modal -->
+				<div class="modal fade" id="secondModal" tabindex="-1" role="dialog" aria-labelledby="secondModalLabel"
+					aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="secondModalLabel">Second Review</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								. . .
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
 				<div class="rowTest">
 					<div class="colTest">
-						<div class="testimonial">
-							<div class="name">Jesse Doe</div>
+						<div class="testimonial" data-toggle="modal" data-target="#samModal">
+							<div class="name">Sam Chadbourne</div>
 							<div class="stars">
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
@@ -141,12 +214,17 @@
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 							</div>
-							<p>April crafted a progressive exercise program, catered just for me. Hooray!</p>
+							<p>As an avid exercise fan for most of my life, I found Core Fitness through a friend who
+								knew I was in need of changing up my exercise routine. As soon as I met April Hanna, I
+								was inspired . . .</p>
+							<ul class="actions" style="display: block; margin: 0 auto;">
+								<li style="padding: 0;"><a class="button">Read More</a></li>
+							</ul>
 						</div>
 					</div>
-					<div class="colTest">
-						<div class="testimonial">
-							<div class="name">Someone Else</div>
+					<!--<div class="colTest">
+						<div class="testimonial" data-toggle="modal" data-target="#secondModal">
+							<div class="name">Paul Rudd's Cock</div>
 							<div class="stars">
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
@@ -154,9 +232,12 @@
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
 							</div>
-							<p>April crafted a progressive exercise program, catered just for me. Hooray!</p>
+							<p>dis shit fuxkz</p>
+							<ul class="actions" style="display: block; margin: 0 auto;">
+								<li style="padding: 0;"><a class="button">Read More</a></li>
+							</ul>
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 
@@ -272,6 +353,9 @@
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+		integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+		crossorigin="anonymous"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 
