new photos and updates

--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,18 @@
 				<div class="container " id="gallery">
 					<div id="nanogallery2" data-nanogallery2='{
 						  "thumbnailHeight":  ' auto', "thumbnailWidth" : 'auto' }'>
+						<a href="images/personal1.jpg" data-ngThumb="images/thumbs/personal1.jpg"></a>
+						<a href="images/personal2.jpg" data-ngThumb="images/thumbs/personal2.jpg"></a>
+						<a href="images/personal3.jpg" data-ngThumb="images/thumbs/personal3.jpg"></a>
+						<a href="images/instructor.jpg" data-ngThumb="images/thumbs/instructor.jpg"></a>
+						<a href="images/instructor2.jpg" data-ngThumb="images/thumbs/instructor2.jpg"></a>
+						<a href="images/instructor3.jpg" data-ngThumb="images/thumbs/instructor3.jpg"></a>
+						<a href="images/35.jpg" data-ngThumb="images/thumbs/35.jpg"></a>
+						<a href="images/36.jpg" data-ngThumb="images/thumbs/36.jpg"></a>
+						<a href="images/37.jpg" data-ngThumb="images/thumbs/37.jpg"></a>
+						<a href="images/spinning.jpg" data-ngThumb="images/thumbs/spinning.jpg"></a>
+						<a href="images/nutrition1.jpg" data-ngThumb="images/thumbs/nutrition1.jpg"></a>
+						<a href="images/nutrition2.jpg" data-ngThumb="images/thumbs/nutrition2.jpg"></a>
 						<a href="images/massage1.jpg" data-ngThumb="images/thumbs/massage1thumb.jpg"></a>
 						<a href="images/spin1.jpg" data-ngThumb="images/thumbs/spin1thumb.jpg"></a>
 						<a href="images/pic1.jpg" data-ngThumb="images/thumbs/pic1thumb.jpg"></a>
