--- a/index.html
+++ b/index.html
@@ -107,32 +107,17 @@
 			<div class="inner">
 				<ul class="faces">
 					<li>
-						<span class="image"><img src="images/april2.png" alt="" /></span>
+						<span class="image display-none"><img src="images/april2.png" alt="" /></span>
+					</li>
+					<li>
+						<span class="image"><img src="images/instructor2Square.png" alt="" /></span>
 						<h3>April Hanna</h3>
 						<p>Studio Owner<br>
 							HIIT and Spin & Strength Instructor</p>
 					</li>
-					<!--<li>
-						<p style="max-width: 65ch;">April Hanna is a fitness professional and certified health coach who
-							loves to share her
-							knowledge and energy with others. Having over 18 years of experience, she is a believer in
-							clean food, pure water, and exercise for the body and mind. She is an industry leader when
-							it comes to helping people reach & maintain their goals. As the owner of Core Fitness Studio
-							in Wadsworth, Ohio- she coaches people daily in person, but also provides her services
-							virtually to clients around the country.</p>
-					</li>
 					<li>
-						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
-						<h3>Sue Butt</h3>
-						<p>Certified Fitness Instructor<br>
-							HIIT and Spin & Strength Instructor</p>
+						<span class="image display-none"><img src="images/instructorSquare.png" alt="" /></span>
 					</li>
-					<li>
-						<span class="image"><img src="images/pic03.jpg" alt="" /></span>
-						<h3>Karey Higgs</h3>
-						<p>Certified Fitness Instructor<br>
-							HIIT and Spin & Strength Instructor</p>
-					</li>-->
 				</ul>
 			</div>
 		</section>
