--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
 									class="button next">Call Now</a></li>
 						</ul>
 					</div>
-					<div class="image" data-position="center"><img src="images/hiit1.jpg" alt="" /></div>
+					<div class="image" data-position="center"><img src="images/hiit.jpg" alt="" /></div>
 				</article>
 				<article class="post style2 alt">
 					<div class="content">
@@ -76,7 +76,7 @@
 									class="button next">Call Now</a></li>
 						</ul>
 					</div>
-					<div class="image" data-position="center"><img src="images/spin1.jpg" alt="" /></div>
+					<div class="image" data-position="center"><img src="images/spinningCropped.png" alt="" /></div>
 				</article>
 				<article class="post style2">
 					<div class="content">
@@ -95,13 +95,13 @@
 									class="button next">Call Now</a></li>
 						</ul>
 					</div>
-					<div class="image" data-position="center"><img src="images/bar1.jpg" alt="" /></div>
+					<div class="image" data-position="center"><img src="images/personal1.jpg" alt="" /></div>
 				</article>
 				<article class="post style2 alt">
 					<div class="content">
 						<header>
 							<span class="category">Challenging - Energizing - Rewarding</span>
-							<h3>Health & Nutritional Coaching</h3>
+							<h3>Health, Nutrition & Accountability Coaching</h3>
 						</header>
 						<p>Having a personal Health and Nutrition Coach bridges the gap between the desire to be healthy
 							and actually being healthy. With the specifics of your life taken into account, a plan is
@@ -113,7 +113,7 @@
 									class="button next">Call Now</a></li>
 						</ul>
 					</div>
-					<div class="image" data-position="center"><img src="images/towelStack1.jpg" alt="" /></div>
+					<div class="image" data-position="center"><img src="images/nutrition1.jpg" alt="" /></div>
 				</article>
 				<article class="post style2">
 					<div class="content">
