--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@
 									class="button next">Call Now</a></li>
 						</ul>
 					</div>
-					<div class="image" data-position="center"><img src="images/nutrition1.jpg" alt="" /></div>
+					<div class="image nutrition" data-position="center"><img src="images/nutrition1.jpg" alt="" /></div>
 				</article>
 				<article class="post style2">
 					<div class="content">
