--- a/gallery.html
+++ b/gallery.html
@@ -105,9 +105,9 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="https://www.facebook.com/CoreFitnessoh-105194498382341"
-						class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/corefitness.oh/" class="icon brands alt fa-instagram"><span
+				<li><a href="https://www.facebook.com/april.hanna.44" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/aprilhanna4/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
 				<li><a href="tel:3307147379"
 						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
