--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<article class="post style2">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>Core Fitness Studio</h3>
 						</header>
 						<p>Core Fit also offers more than just classes. It’s a community that will foster inspiration
@@ -113,7 +113,7 @@
 						<span class="image"><img src="images/instructor2Square.png" alt="" /></span>
 						<h3>April Hanna</h3>
 						<p>Studio Owner<br>
-							HIIT and Spin & Strength Instructor</p>
+							Personal Trainer and Fitness Expert</p>
 					</li>
 					<li>
 						<span class="image display-none"><img src="images/instructorSquare.png" alt="" /></span>
@@ -234,7 +234,7 @@
 			<header>
 				<h2>Get in touch</h2>
 				<a
-					href="https://mail.google.com/mail/?view=cm&fs=1&to=corefitnessstudio@protonmail.com&su=Subject&body=Body">corefitnessstudio@protonmail.com</a><br>
+					href="https://mail.google.com/mail/?view=cm&fs=1&to=aprilhanna1@yahoo.com&su=Subject&body=Body">aprilhanna1@yahoo.com</a><br>
 				<a href="tel:3307147379"
 					onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(330)
 					714-7379</a><br>
@@ -266,9 +266,9 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="https://www.facebook.com/CoreFitnessoh-105194498382341"
-						class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/corefitness.oh/" class="icon brands alt fa-instagram"><span
+				<li><a href="https://www.facebook.com/april.hanna.44" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/aprilhanna4/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
 				<li><a href="tel:3307147379"
 						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
