--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
 				<article class="post style2">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>H.I.I.T. Classes</h3>
 						</header>
 						<p>Our High Intensity Interval Training classes are a very efficient way to exercise. The format
@@ -63,7 +63,7 @@
 				<article class="post style2 alt">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>Spinning & Strength</h3>
 						</header>
 						<p>This 90 minute workout is sure to create some significant changes in both body and mind. It
@@ -81,7 +81,7 @@
 				<article class="post style2">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>Personal Training</h3>
 						</header>
 						<p>We focus on the word "personal" when it comes to creating a program that is a perfect fit for
@@ -100,7 +100,7 @@
 				<article class="post style2 alt">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>Health, Nutrition & Accountability Coaching</h3>
 						</header>
 						<p>Having a personal Health and Nutrition Coach bridges the gap between the desire to be healthy
@@ -118,7 +118,7 @@
 				<article class="post style2">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>Sports Recovery Massage</h3>
 						</header>
 						<p>Sports Recovery Massage is the application of massage techniques to reduce muscle tension,
@@ -136,7 +136,7 @@
 				<article class="post style2 alt">
 					<div class="content">
 						<header>
-							<span class="category">Challenging - Energizing - Rewarding</span>
+							<!-- <span class="category">Challenging - Energizing - Rewarding</span> -->
 							<h3>Tanning</h3>
 						</header>
 						<p>We offer a stand up tanning experience that allows for a full body tan. Session times can
@@ -156,9 +156,9 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="https://www.facebook.com/CoreFitnessoh-105194498382341"
-						class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/corefitness.oh/" class="icon brands alt fa-instagram"><span
+				<li><a href="https://www.facebook.com/april.hanna.44" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/aprilhanna4/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
 				<li><a href="tel:3307147379"
 						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
