--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
 				<h2>Get in touch</h2>
 				<a
 					href="https://mail.google.com/mail/?view=cm&fs=1&to=aprilhanna1@yahoo.com&su=Subject&body=Body">aprilhanna1@yahoo.com</a><br>
-				<a href="tel:3307147379"
-					onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(330)
+				<a href="tel:3307147379">(330)
 					714-7379</a><br>
 				<a
 					href="https://www.google.com/maps/place/1374+Reimer+Rd,+Wadsworth,+OH+44281/@41.0549324,-81.7382483,18.5z/data=!4m5!3m4!1s0x8830cc2d81db5c47:0x8842bf7c628b9d0e!8m2!3d41.0550145!4d-81.73773">1374
@@ -270,9 +269,7 @@
 							class="label">Facebook</span></a></li>
 				<li><a href="https://www.instagram.com/aprilhanna4/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="tel:3307147379"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:3307147379" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=corefitnessstudio@protonmail.com&su=Subject&body=Body"
 						class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
