--- a/services.html
+++ b/services.html
@@ -53,9 +53,7 @@
 							community atmosphere in a clean and private setting. You will walk away feeling empowered
 							and energized.</p>
 						<ul class="actions">
-							<li><a href="tel:3307147379"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="button next">Call Now</a></li>
+							<li><a href="tel:3307147379" class="button next">Call Now</a></li>
 						</ul>
 					</div>
 					<div class="image" data-position="center"><img src="images/hiit.jpg" alt="" /></div>
@@ -71,9 +69,7 @@
 							flats, climbs, sprints, and jumps. Then we grab some weights and hit the floor to build
 							muscular strength and endurance through our specific training regimen.</p>
 						<ul class="actions">
-							<li><a href="tel:3307147379"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="button next">Call Now</a></li>
+							<li><a href="tel:3307147379" class="button next">Call Now</a></li>
 						</ul>
 					</div>
 					<div class="image" data-position="center"><img src="images/spinningCropped.png" alt="" /></div>
@@ -90,9 +86,7 @@
 							form and function, we will take you out of your comfort zone, aide you in creating muscle
 							memory, and we will have fun along the way!</p>
 						<ul class="actions">
-							<li><a href="tel:3307147379"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="button next">Call Now</a></li>
+							<li><a href="tel:3307147379" class="button next">Call Now</a></li>
 						</ul>
 					</div>
 					<div class="image" data-position="center"><img src="images/personal1.jpg" alt="" /></div>
@@ -108,9 +102,7 @@
 							devised and the journey begins. Your coach will support you every step of the way and will
 							stretch you to achieve goals you never dreamed were possible.</p>
 						<ul class="actions">
-							<li><a href="tel:3307147379"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="button next">Call Now</a></li>
+							<li><a href="tel:3307147379" class="button next">Call Now</a></li>
 						</ul>
 					</div>
 					<div class="image nutrition" data-position="center"><img src="images/nutrition1.jpg" alt="" /></div>
@@ -126,9 +118,7 @@
 							by relaxing and lengthening the muscles. Treatment increments begin at 15 minutes and are
 							suited to the needs of the client.</p>
 						<ul class="actions">
-							<li><a href="tel:3307147379"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="button next">Call Now</a></li>
+							<li><a href="tel:3307147379" class="button next">Call Now</a></li>
 						</ul>
 					</div>
 					<div class="image" data-position="center"><img src="images/massage1.png" alt="" /></div>
@@ -143,9 +133,7 @@
 							last up to 10 minutes. Most clients find they enjoy tanning prior to going on vacation or
 							during the winter months when they need a vitamin D boost.</p>
 						<ul class="actions">
-							<li><a href="tel:3307147379"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="button next">Call Now</a></li>
+							<li><a href="tel:3307147379" class="button next">Call Now</a></li>
 						</ul>
 					</div>
 					<div class="image" data-position="center"><img src="images/tanning1.png" alt="" /></div>
@@ -160,9 +148,7 @@
 							class="label">Facebook</span></a></li>
 				<li><a href="https://www.instagram.com/aprilhanna4/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="tel:3307147379"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:3307147379" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=corefitnessstudio@protonmail.com&su=Subject&body=Body"
 						class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
