--- a/gallery.html
+++ b/gallery.html
@@ -109,9 +109,7 @@
 							class="label">Facebook</span></a></li>
 				<li><a href="https://www.instagram.com/aprilhanna4/" class="icon brands alt fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="tel:3307147379"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:3307147379" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=corefitnessstudio@protonmail.com&su=Subject&body=Body"
 						class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
